# KoalaByte-Blue

./: .gitignore  README.md  install.sh
docs/: 8_KEY_BUTTON_BOARD.md  ANTEATER_BLE_CARD_SKIMMER_DETECTOR.md  AUTHORIZED_LAB_ACTIONS.md  BEACON_RECORD_REPLAY_REVA12.md  BOOT_ANIMATION_REVA13.md  BUTTON_WIRING_REVA5.md  CAMERA_AWARENESS_LOGGER.md  DIDGERIDOO_LORA_SETUP.md  EAR_TAG_TX_LAB_REVA15.md  ESP32_CUSTOM_ANIMATED_EYES.md  ESP32_TOUCH_MENU_CALIBRATION.md  EUCALYPTUS_ALWAYS_ON_BLE_REVA8.md  EXTERNAL_ANTENNA_READINESS.md  FIELD_READINESS_UPGRADES.md  FLASHING.md  FRONT_PANEL_BUTTONS_REVA5.md  GREATWHITE_REEF.md  HELTEC_BRANCH_MINING_FINDINGS.md  INSTALL_DEPENDENCIES.md  KILLERKOALA_LORA_TRAINING.md  KILLERKOALA_VOCABULARY_REVA17.md  KILLERKOALA_VOICE_CONTROL_REVA19.md  KOALA_BLUEZ_TOOLS_REVA16.md  KOALA_KAN_KOMMANDER_REVA22.md  KOALA_KAPTURE_REVA12.md  KOALA_KOMBAT_KRUISIN_SURVEY.md  KOALA_KOMBAT_NODE_ROLES.md  KOALA_KONNECT_REVA20.md  KOALA_KRY_REVA11.md  KOALA_KRY_REVA12.md  KOALA_MODE_SWITCHER_REVA21.md  LAB_TAG_BEACON_SKILL_REVA7.md  LIVE_BOOT_SD_MAINTENANCE.md  MAIN_BLE_NODE_ROLES.md  MENU_SELECTION_REVA12.md  MENU_SELECTION_SCREEN_REVA12.md  MENU_THEME_REVA14.md  MINED_HELTEC_V2_FEATURES.md  NCS_LOCAL_SETUP.md  NRF52840_DK_FLASHING.md  (+15 more)
firmware/t114-combined-safe/: CMakeLists.txt  prj.conf
firmware/t114-combined-safe/src/: main.c
logrotate/: koalabyte-blue
pi-companion/: config.default.json  requirements-heltec-v2-extra.txt  requirements.txt
production/: README.md  WIRING_DIAGRAM_ANTENNAS.md
scripts/: build_default_t114_protocol_artifacts.sh  (+137 more)
(+120 files in other folders)
